--- a/CoffeeBrewer.API/appsettings.Production.json
+++ b/CoffeeBrewer.API/appsettings.Production.json
@@ -1,12 +1,23 @@
 {
+  "ApiUris": {
+    "WeatherApi": "https://api.openweathermap.org/data/2.5/weather",
+    "GeolocationApi": "http://api.openweathermap.org/geo/1.0/direct",
+    "IpInfoApi": "https://ipinfo.io"
+  },
   "ConnectionStrings": {
     "RedisConnection": "redis:6379"
   },
-  "UseRedis": true,
+  "DefaultLocation": {
+    "City": "Melbourne",
+    "State": "VIC",
+    "CountryCode": "AU"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "MinmumTempForIced": "15",
+  "UseRedis": true
 }
