--- a/CoffeeBrewer.API/appsettings.json
+++ b/CoffeeBrewer.API/appsettings.json
@@ -1,13 +1,24 @@
 {
+  "AllowedHosts": "*",
+  "ApiUris": {
+    "WeatherApi": "https://api.openweathermap.org/data/2.5/weather",
+    "GeolocationApi": "http://api.openweathermap.org/geo/1.0/direct",
+    "IpInfoApi": "https://ipinfo.io"
+  },
   "ConnectionStrings": {
     "RedisConnection": "redis:6379"
   },
-  "UseRedis": false,
+  "DefaultLocation": {
+    "City": "Melbourne",
+    "State": "VIC",
+    "CountryCode": "AU"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "MinmumTempForIced": "15",
+  "UseRedis": false
 }
