--- a/CoffeeBrewer.Infrastructure/CoffeeBrewer.Infrastructure.csproj
+++ b/CoffeeBrewer.Infrastructure/CoffeeBrewer.Infrastructure.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>931a4cd2-0fdb-4a07-9d60-2f35275e3c34</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
   </ItemGroup>
 
